<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.icaro.myapplication.ListarPostActivity"
    tools:showIn="@layout/activity_listar_post">

    <GridLayout
        android:id="@+id/gridLayoutImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:orientation="horizontal"
        android:rowCount="4">

        <ImageView
            android:id="@+id/imgPost"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:layout_row="0"
            android:contentDescription="@string/conteudoImgPost"
            app:srcCompat="@android:drawable/ic_menu_agenda" />

        <Spinner
            android:id="@+id/spinLstAssunto"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:prompt="@string/txtComboPost"
            android:padding="30dp"/>

        <ListView
            android:id="@+id/lstViewConteudo"
            android:layout_width="wrap_content"
            android:layout_height="250sp"
            android:layout_column="0"
            android:layout_row="2"
            android:footerDividersEnabled="false"
            android:dividerHeight="4dp"/>

        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="end"
            android:layout_row="3"
            android:contentDescription="@string/btnAdd"
            app:srcCompat="@android:drawable/ic_input_add" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
